# sumo-vm-mgr

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  README.md
crates/app-mgr/: Cargo.toml
crates/app-mgr/src/: boot.rs  install.rs  lib.rs  state.rs
crates/boot/: Cargo.toml
crates/boot/src/: backend.rs  config.rs  lib.rs  main.rs  qemu.rs  qnx.rs  tests.rs
crates/component-factory/: Cargo.toml
crates/component-factory/src/: lib.rs
crates/diagserver/: Cargo.toml
crates/diagserver/src/: backend.rs  did.rs  lib.rs  main.rs  manifest.rs  manifest_provider.rs  ota.rs  sovd_main.rs  sovd_tests.rs  streaming.rs  suit_provider.rs  tests.rs
crates/diagserver/src/sovd/: error.rs  handlers.rs  mod.rs  models.rs  router.rs  security.rs  state.rs
crates/diagserver/tests/: streaming.rs
crates/host-metrics/: Cargo.toml
crates/host-metrics/src/: lib.rs  main.rs
crates/host-metrics/src/readers/: linux.rs  mod.rs  qnx.rs
crates/host-os-mgr/: Cargo.toml
crates/host-os-mgr/src/: component.rs  lib.rs
crates/host-os-mgr/src/ifs/: dev.rs  mod.rs  partition.rs
crates/hsm/: Cargo.toml
crates/hsm/src/: crypto.rs  ivd.rs  key_unwrap.rs  lib.rs  linux.rs  payload.rs  qnx.rs  sim.rs  types.rs
crates/hypervisor-mgr/: Cargo.toml
crates/hypervisor-mgr/src/: backend.rs  component_adapter.rs  diag_backend.rs  diag_backend_tests.rs  lib.rs  main.rs  manifest.rs  ota.rs  sovd_main.rs  streaming.rs  suit_provider.rs  tests.rs  wrapper_http_tests.rs
crates/hypervisor-mgr/src/ifs/: dev.rs  hardware.rs  mod.rs
crates/hypervisor-mgr/tests/: streaming.rs
crates/machine-mgr/: Cargo.toml
crates/machine-mgr/src/: component.rs  error.rs  lib.rs  machine.rs  tests.rs  types.rs
crates/nv-store/: Cargo.toml
crates/nv-store/src/: block.rs  lib.rs  store.rs  tests.rs  types.rs
crates/secstore/: Cargo.toml
crates/secstore/src/: file_backend.rs  lib.rs  linux_encryptor.rs
crates/sumo-verify/: Cargo.toml
crates/sumo-verify/src/: main.rs
crates/sumo-verify/tests/: end_to_end.rs
crates/vhsm-ssd/: Cargo.toml
crates/vhsm-ssd/src/: acl.rs  codec.rs  handle_table.rs  handler.rs  lib.rs  main.rs  policy.rs  proto.rs  session.rs  transport.rs
crates/vhsm-ssd/tests/: integration.rs
crates/vm-devices/: Cargo.toml
crates/vm-devices/src/: can.rs  clock.rs  health.rs  heartbeat.rs  lib.rs  power.rs  qmp.rs  regs.rs  time.rs  transport.rs
crates/vm-devices/src/can/: socketcan.rs
crates/vm-devices/src/clock/: gptp.rs  simulation.rs  system.rs
crates/vm-devices/src/transport/: http.rs  ivshmem.rs  mem.rs  posix.rs  qnx.rs  shmem.rs  tcp_stream.rs
crates/vm-devices/tests/: sim_stepping.rs
crates/vm-mgr/: Cargo.toml
crates/vm-mgr/src/: backend.rs  bank_spec.rs  component_adapter.rs  component_adapter_tests.rs  diag_backend.rs  diag_backend_tests.rs  did.rs  lib.rs  main.rs  manifest.rs  manifest_provider.rs  ota.rs  sovd_main.rs  sovd_tests.rs  streaming.rs  suit_provider.rs  tests.rs
crates/vm-mgr/src/sovd/: security.rs
crates/vm-mgr/tests/: streaming.rs
crates/vm-service/: Cargo.toml
crates/vm-service/src/: api.rs  config.rs  health.rs  health_status.rs  ivshmem.rs  lib.rs  main.rs  manager.rs  transport_setup.rs
crates/vm-service/src/runner/: dummy.rs  mod.rs  qemu.rs  qnx.rs
crates/vm-transport/: Cargo.toml
crates/vm-transport/src/: heartbeat.rs  lib.rs  power.rs  transport.rs
crates/vm-wire/: Cargo.toml
crates/vm-wire/src/: lib.rs  time.rs
docs/: simulation-stepping.md
example/: .gitignore  README.md  build.rs  build.sh  build_hsm_keys.rs  run.sh  vm-mgr.yaml
example/config/: secrets.toml
example/dummy-vm/: health-check.sh  run-vm.sh  vm-service.yaml
example/factory/: factory.yaml  hsm.yaml  hypervisor.yaml  os2.yaml  qtd.yaml  vm1.yaml  vm2.yaml
example/profiles/: os1-dev.toml  os1-linux-amd64.toml  os1-minimal.toml  vm1-dev.toml  vm1-linux-amd64.toml  vm1-minimal.toml
example/templates/: crl.yaml.tmpl  hsm-keys.yaml.tmpl  l2-encrypted.yaml.tmpl  l2-reference.yaml.tmpl
firmware/: hyp.yaml  os1.yaml
profiles/: os1-dev.toml
scripts/: mkbundle.sh  run.sh
specs/: bank-state-machine.md  disk-layout.md  nv-store-format.md
tasks/: test-checklist.md  todo.md
