[workspace]
resolver = "2"
members = [
    "crates/nv-store",
    "crates/boot",
    "crates/vm-mgr",
    "crates/host-os-mgr",
    "crates/app-mgr",
    "crates/machine-mgr",
    "crates/vm-service",
    "crates/hsm",
    "crates/vhsm-ssd",
    "crates/vm-wire",
    "crates/vm-devices",
    "crates/secstore",
    "crates/component-factory",
    "crates/host-metrics",
]
