[package]
name = "vm-diagserver"
version = "0.1.0"
edition = "2021"

[dependencies]
nv-store = { path = "../nv-store" }
sha2 = "0.10"
crc32fast = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net"] }
tower-http = { version = "0.6", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde_yaml = "0.9"

[dev-dependencies]
http-body-util = "0.1"
tower = { version = "0.5", features = ["util"] }
hyper = "1"

[[bin]]
name = "vm-diagserver"
path = "src/main.rs"

[[bin]]
name = "vm-sovd"
path = "src/sovd_main.rs"
