[package]
name = "vm-diagserver"
version = "0.1.0"
edition = "2021"

[dependencies]
nv-store = { path = "../nv-store" }
sha2 = "0.10"
crc32fast = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde_yaml = "0.9"
getrandom = "0.2"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
sovd-core = { git = "ssh://git@github.com/sdv-playground/SOVDd.git", branch = "main" }
sovd-api = { git = "ssh://git@github.com/sdv-playground/SOVDd.git", branch = "main" }
sumo-onboard = { git = "ssh://git@github.com/tr-sdv-sandbox/sumo-rs.git", branch = "main" }
coset = "0.3"
sumo-crypto = { git = "ssh://git@github.com/tr-sdv-sandbox/sumo-rs.git", branch = "main" }
sumo-codec = { git = "ssh://git@github.com/tr-sdv-sandbox/sumo-rs.git", branch = "main" }

[dev-dependencies]
http-body-util = "0.1"
tower = { version = "0.5", features = ["util"] }
hyper = "1"
sumo-offboard = { git = "ssh://git@github.com/tr-sdv-sandbox/sumo-rs.git", branch = "main" }

[[bin]]
name = "vm-diagserver"
path = "src/main.rs"

[[bin]]
name = "vm-sovd"
path = "src/sovd_main.rs"

[[example]]
name = "build"
path = "../../example/build.rs"
