[package]
name = "host-os-mgr"
version = "0.1.0"
edition = "2021"
description = "Host OS update manager — A/B boot partition, IFS activation, reboot coordination"

[dependencies]
nv-store = { path = "../nv-store" }
machine-mgr = { path = "../machine-mgr" }
vm-boot = { path = "../boot" }
sha2 = "0.10"
async-trait = "0.1"
tracing = "0.1"
serde_json = "1"
