[package]
name = "hsm"
version = "0.1.0"
edition = "2021"
description = "HSM provider trait and Linux simulation backend"

[dependencies]
tracing = "0.1"
libc = "0.2"
ciborium = "0.2"
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11"
coset = { version = "0.3", default-features = false }

sumo-onboard = { git = "ssh://git@github.com/tr-sdv-sandbox/sumo-rs.git", branch = "main", optional = true }
sumo-crypto = { git = "ssh://git@github.com/tr-sdv-sandbox/sumo-rs.git", branch = "main", optional = true }
sumo-codec = { git = "ssh://git@github.com/tr-sdv-sandbox/sumo-rs.git", branch = "main", optional = true }

[features]
default = ["suit"]
suit = ["dep:sumo-onboard", "dep:sumo-crypto", "dep:sumo-codec"]
