[package]
name = "hsm"
version = "0.1.0"
edition = "2021"
description = "HSM provider trait and Linux simulation backend"

[dependencies]
tracing = "0.1"
libc = "0.2"
ciborium = "0.2"
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11"
coset = { version = "0.3", default-features = false }

sumo-onboard = { git = "ssh://git@github.com/tr-sdv-sandbox/sumo-rs.git", branch = "main", optional = true }
sumo-crypto = { git = "ssh://git@github.com/tr-sdv-sandbox/sumo-rs.git", branch = "main", optional = true }
sumo-codec = { git = "ssh://git@github.com/tr-sdv-sandbox/sumo-rs.git", branch = "main", optional = true }

# RustCrypto — used by HsmCryptoProvider for software crypto (simulation)
p256 = { version = "0.13", features = ["ecdsa"], optional = true }
ecdsa = { version = "0.16", features = ["signing", "verifying", "der"], optional = true }
aes-gcm = { version = "0.10", optional = true }
hkdf = { version = "0.12", optional = true }
sha2 = { version = "0.10", optional = true }
rand = { version = "0.8", optional = true }
cmac = { version = "0.7", optional = true }
aes = { version = "0.8", optional = true }

[features]
default = ["suit"]
suit = ["dep:sumo-onboard", "dep:sumo-crypto", "dep:sumo-codec"]
crypto = ["dep:p256", "dep:ecdsa", "dep:aes-gcm", "dep:hkdf", "dep:sha2", "dep:rand", "dep:cmac", "dep:aes"]
