[package]
name = "machine-mgr"
version = "0.1.0"
edition = "2021"
description = "Machine + Component traits — semantic API behind diagserver, swappable real/sim impls"

[dependencies]
async-trait = "0.1"
bytes = "1"
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sovd-core = { git = "ssh://git@github.com/sdv-playground/SOVDd.git", branch = "main" }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
