[package]
name = "vhsm-ssd"
version = "0.1.0"
edition = "2021"
description = "vHSM Secure Storage Daemon — host-side crypto service for guest VMs"

[dependencies]
hsm = { path = "../hsm", features = ["crypto"] }
secstore = { path = "../secstore" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
libc = "0.2"
p256 = { version = "0.13", features = ["ecdsa"] }
ecdsa = { version = "0.16", features = ["verifying", "der"] }
rand = "0.8"

[dev-dependencies]
p256 = { version = "0.13", features = ["ecdsa"] }
ecdsa = { version = "0.16", features = ["signing", "verifying", "der"] }
rand = { version = "0.8", features = ["std"] }

[[bin]]
name = "vhsm-ssd"
path = "src/main.rs"
