[package]
name = "vm-service"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "sync", "signal", "process"] }
hyper = "1"
hyper-util = { version = "0.1", features = ["tokio"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
libc = "0.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
vm-devices = { path = "../vm-devices" }

[features]
qnx = ["vm-devices/qnx"]

[dev-dependencies]
tempfile = "3"

[lib]
name = "vm_service"
path = "src/lib.rs"

[[bin]]
name = "vm-service"
path = "src/main.rs"
